--- a/api/composer.json
+++ b/api/composer.json
@@ -2,6 +2,8 @@
     "require": {
         "slim/slim": "^3.0",
         "propel/propel": "~2.0@dev",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "adldap2/adldap2": "^9.1",
+        "firebase/php-jwt": "^5.0"
     }
 }
